--- a/themes/zero/layouts/posts/single.html
+++ b/themes/zero/layouts/posts/single.html
@@ -2,7 +2,7 @@
 <article class="post flow wrapper">
     <header>
         <h1>{{ .Title | safeHTML }}</h1>
-        <p class="post__meta">Published: <time datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat "2006-01-02" .Date }}</time> · {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read</p>
+        <p class="post__meta">Published: <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format ":date_long" }}</time> · {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read</p>
     </header>
 
     {{ .Content }}
