--- a/themes/zero/layouts/posts/single.html
+++ b/themes/zero/layouts/posts/single.html
@@ -3,6 +3,13 @@
     <header>
         <h1>{{ .Title | safeHTML }}</h1>
         <p class="post__meta">Published: <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format ":date_long" }}</time> · {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read</p>
+        {{ with .GetTerms "tags" }}
+        <ul class="tags">
+            {{ range . }}
+            <li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
+            {{ end }}
+        </ul>
+        {{ end }}
     </header>
 
     {{ .Content }}
