--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -35,6 +35,8 @@
     --color--mono-90: #f6f5f2;
     --color--mono-95: #f9f9f9;
     --color--blue: #4ac7ec;
+    --color--red: #fa7416;
+    --color--yellow: #ffc500;
     --color-primary: var(--color--blue);
     --color-secondary: #78B0D9; // #008fff;
 
@@ -48,8 +50,8 @@
     --theme--color-selection-bg: var(--color--mono-15);
 
     --font--base: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
-    --font--heading: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
-    --font--code: var(--font--heading);
+    --font--heading: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
+    --font--code: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
 }
 
 // Reset
@@ -225,8 +227,21 @@ a {
     margin-left: -2.25em;
 }
 
-.highlight pre {
+.post__item,
+.til__item {
+    margin-bottom: 1em;
+}
+
+.pre,
+.code {
     font-family: var(--font--code);
+}
+
+p > code {
+    color: var(--color--red);
+}
+
+.highlight pre {
     font-size: var(--size-step-0);
     overflow-x: scroll;
     padding-block: var(--space-s);
