--- a/themes/zero/layouts/_default/list.html
+++ b/themes/zero/layouts/_default/list.html
@@ -18,7 +18,7 @@
           {{ range .Pages.ByDate.Reverse }}
             <li class="post__item">
                 <span class="post__meta"><time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format ":date_long" }}</time> &mdash;</span>
-                <a class="post__link" href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title | safeHTML }}</a>
+                <a class="post__link" href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title | markdownify | safeHTML }}</a>
             </li>
           {{ end }}
         </ul>
@@ -28,7 +28,7 @@
         {{ range .Pages.ByDate.Reverse }}
             <li class="post__item">
                 <span class="post__meta"><time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format ":date_long" }}</time> &mdash;</span>
-                <a class="post__link" href="{{ .Permalink }}" title="{{ .Title }}">{{.Title | safeHTML }}</a>
+                <a class="post__link" href="{{ .Permalink }}" title="{{ .Title }}">{{.Title | markdownify | safeHTML }}</a>
             </li>
         {{ end }}
         </ul>
