--- a/themes/zero/layouts/index.html
+++ b/themes/zero/layouts/index.html
@@ -11,13 +11,13 @@
 
         {{ range first 10 $posts }}
         <li class="post__item">
-            <a class="post__link" href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title | safeHTML }}</a>
+            <a class="post__link" href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title | markdownify | safeHTML }}</a>
             <p class="post__meta">Published: <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format ":date_long" }}</time> · {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read</p>
         </li>
         {{ end }}
     </ul>
-    {{ if gt (len $posts) 2 }}
-    <a href="/posts" class="button">See all {{ len $posts }} posts</a>
+    {{ if gt (len $posts) 10 }}
+    <a href="/posts" class="button">Archive</a>
     {{ end }}
 </article>
 {{ end }}
