--- a/themes/zero/layouts/partials/head.html
+++ b/themes/zero/layouts/partials/head.html
@@ -20,7 +20,7 @@
     <link rel="canonical" href="{{ .Permalink | absURL }}">
 
     {{ range .AlternativeOutputFormats -}}
-        {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+        {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | markdownify | safeHTML }}
     {{ end -}}
   
     <link rel="icon" href="/apple-touch-icon.png" type="image/png">
