--- a/themes/zero/layouts/til/single.html
+++ b/themes/zero/layouts/til/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <article class="til flow wrapper">
     <header>
-        <h1>{{ .Title | safeHTML }}</h1>
+        <h1>{{ .Title | markdownify | safeHTML }}</h1>
         <p class="til__meta">
             <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format "2006-02-01" }}</time> &middot;
             {{ if .Params.source }}<a href="{{ .Params.source }}">Source</a>{{ end }}
