--- a/themes/zero/layouts/posts/single.html
+++ b/themes/zero/layouts/posts/single.html
@@ -2,7 +2,10 @@
 <article class="post flow wrapper">
     <header>
         <h1>{{ .Title | markdownify | safeHTML }}</h1>
-        <p class="post__meta">Published: <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 +0000" .Date }}">{{ .Date | time.Format ":date_long" }}</time> · {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read</p>
+        <p class="post__meta">
+            <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 UTC" .PublishDate }}" title="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 UTC" .PublishDate }}">{{ .Date | time.Format ":date_long" }}</time> &middot; {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read
+            {{ if .Params.source }} &middot; <a href="{{ .Params.source }}">Source</a>{{ end }}
+        </p>
         {{ with .GetTerms "tags" }}
         <ul class="tags">
             {{ range . }}
