--- a/themes/zero/layouts/partials/header.html
+++ b/themes/zero/layouts/partials/header.html
@@ -3,7 +3,7 @@
 
   <div class="header__logo">
     <a class="header__link" href="/">zerolab is Dan Braghiș</a>
-    <p class="header__description">Bearded developer at Torchbox</p>
+    <p class="header__description">Bearded developer. Python, Django, Wagtail.</p>
   </div>
 
   <nav aria-label="primary navigation" class="header__nav">
