--- a/themes/zero/layouts/index.html
+++ b/themes/zero/layouts/index.html
@@ -3,7 +3,7 @@
     <header>
         <h1 id="hi">Hi, I'm Dan</h1>
     </header>
-    <p>👋 I'm a Wagtail developer at Torchbox. This is my humble corner on the web.</p>
+    <p>👋 I'm a Python, Django and Wagtail developer. This is my humble corner on the web.</p>
 
     <h2 id="recent-posts">Recent posts</h2>
     <ul class="posts">
