--- a/themes/zero/layouts/posts/single.html
+++ b/themes/zero/layouts/posts/single.html
@@ -2,17 +2,19 @@
 <article class="post flow wrapper">
     <header>
         <h1>{{ .Title | markdownify | safeHTML }}</h1>
-        <p class="post__meta">
-            <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 UTC" .PublishDate }}" title="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 UTC" .PublishDate }}">{{ .Date | time.Format ":date_long" }}</time> &middot; {{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read
+        <div class="post__meta">
+            <time datetime="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 UTC" .PublishDate }}" title="{{ dateFormat "Mon, 02 Jan 2006 15:04:05 UTC" .PublishDate }}">{{ .Date | time.Format ":date_long" }}</time> &middot; 
+            <span>{{ .ReadingTime }} {{ if (eq .ReadingTime 1) }}minute{{ else }}minutes{{ end }} read</span>
             {{ if .Params.source }} &middot; <a href="{{ .Params.source }}">Source</a>{{ end }}
-        </p>
-        {{ with .GetTerms "tags" }}
-        <ul class="tags">
-            {{ range . }}
-            <li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
+            {{ with .GetTerms "tags" }}
+            &middot;
+            <ul class="tags">
+                {{ range . }}
+                <li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
+                {{ end }}
+            </ul>
             {{ end }}
-        </ul>
-        {{ end }}
+        </div>
     </header>
 
     {{ .Content }}
